[field] Fix spacing between changes and groups of changes

--- a/packages/@sanity/field/src/diff/components/ChangeList.css
+++ b/packages/@sanity/field/src/diff/components/ChangeList.css
@@ -3,6 +3,12 @@
 .root {
 }
 
+.changeList {
+  display: grid;
+  grid-template-columns: minmax(0, 1fr);
+  grid-gap: 2em;
+}
+
 .footer {
   margin-top: 2em;
 }
